# chessFish4

./: .gitignore  CMakeLists.txt  ChessEngine.cpp  ChessEngine.h  GUIEngineGame.h  MagicNumberGenerator.cpp  MagicNumberGenerator.h  MagicsTester.cpp  MagicsTester.h  MonteCarloEngine.cpp  MonteCarloEngine.h  README.md  RandomEngine.h  chessFish4Game.cpp  chessFish4Game.h  configurations.h  engine.cpp  engine.h  foundMagicNumbers.txt  foundMagicNumbersCondensed.txt  game.cpp  game.h  main.cpp  moves.cpp  moves.h  test.cpp  testMoves.h  tests.cpp  tests.h  timing.cpp  timing.h
OpeningBook/: OpeningBook.cpp  OpeningBook.h
UCI/: UCISupport.cpp  UCISupport.h
engines/: ChessEngine.h  IterativeDeepeningMinimaxEngine.cpp  IterativeDeepeningMinimaxEngine.h  MiniMaxEngine.cpp  MiniMaxEngine.h  MonteCarloEngine.cpp  MonteCarloEngine.h  RandomEngine.cpp  RandomEngine.h
engines/Extra/: StockFishEngine.cpp  StockFishEngine.h
externalEngines/: output.txt  testCommands.txt
magic_numbers/: MagicNumberGenerator.cpp  MagicNumberGenerator.h  MagicsTester.cpp  MagicsTester.h
old_code/: chessFish4Game.cpp  chessFish4Game.h  engine.cpp  engine.h
tests/: tests.cpp  tests.h
timing/: timing.cpp  timing.h
visuals/: GUIEngine.h  GUIEngineGame.h
